TP2/erros.txt
Module.cpp:3:8: error: expected unqualified-id
Module(char *fileName){
       ^
Module.cpp:3:8: error: expected ')'
Module.cpp:3:7: note: to match this '('
Module(char *fileName){
      ^
2 errors generated.
main.cpp:2:10: error: 'Linker.hpp' file not found with <angled> include; use "quotes" instead
#include <Linker.hpp>
         ^~~~~~~~~~~~
         "Linker.hpp"
main.cpp:3:10: error: 'Module.hpp' file not found with <angled> include; use "quotes" instead
#include <Module.hpp>
         ^~~~~~~~~~~~
         "Module.hpp"
2 errors generated.
